Modules/Security_g.tf
resource "aws_security_group" "allow_tls" {
  name        = "loadbalancer-sg"
  description = "Allow TLS inbound traffic and all outbound traffic"

  tags = {
    Name = "sg-loadbalancer"
  }

  ingress {
    description = "ssh"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Http"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
